pretty print stat result